syntax = "proto3";

package c1.connector.v2;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "validate/validate.proto";

option go_package = "github.com/conductorone/baton-sdk/pb/c1/connector/v2";

service ResourceTypesService {
  rpc ListResourceTypes(ResourceTypesServiceListResourceTypesRequest) returns (ResourceTypesServiceListResourceTypesResponse);
}

message ResourceType {
  string id = 1 [(validate.rules).string = {
    min_bytes: 1
    max_bytes: 1024
  }];
  string display_name = 2 [(validate.rules).string = {
    min_bytes: 1
    max_bytes: 1024
    ignore_empty: true
  }];

  enum Trait {
    TRAIT_UNSPECIFIED = 0;
    TRAIT_USER = 1;
    TRAIT_GROUP = 2;
    TRAIT_ROLE = 3;
    TRAIT_APP = 4;
  }
  repeated Trait traits = 3 [(validate.rules).repeated = {
    unique: true
    items: {
      enum: {defined_only: true}
    }
  }];
  repeated google.protobuf.Any annotations = 4;
  string description = 5 [(validate.rules).string = {
    min_bytes: 1
    max_bytes: 4096
    ignore_empty: true
  }];
  bool sourced_externally = 6;
}

message ResourceTypesServiceListResourceTypesRequest {
  Resource parent = 1;
  uint32 page_size = 2 [(validate.rules).uint32 = {
    ignore_empty: true
    lte: 250
  }];
  string page_token = 3 [(validate.rules).string = {
    ignore_empty: true
    min_bytes: 1
    max_bytes: 1048576 // 1MB
  }];
  repeated google.protobuf.Any annotations = 4;
}

message ResourceTypesServiceListResourceTypesResponse {
  repeated ResourceType list = 1;
  string next_page_token = 2 [(validate.rules).string = {
    ignore_empty: true
    min_bytes: 1
    max_bytes: 1048576 // 1MB
  }];
  repeated google.protobuf.Any annotations = 3;
}

service ResourcesService {
  rpc ListResources(ResourcesServiceListResourcesRequest) returns (ResourcesServiceListResourcesResponse);
}

service ResourceManagerService {
  rpc CreateResource(CreateResourceRequest) returns (CreateResourceResponse);
  rpc DeleteResource(DeleteResourceRequest) returns (DeleteResourceResponse);
}

service CredentialManagerService {
  rpc RotateCredential(RotateCredentialRequest) returns (RotateCredentialResponse);
}

service AccountManagerService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
}

message CreateResourceRequest {
  Resource resource = 1;
}

message CreateResourceResponse {
  Resource created = 1;
  repeated google.protobuf.Any annotations = 2;
}

message DeleteResourceRequest {
  ResourceId resource_id = 1;
}

message DeleteResourceResponse {
  repeated google.protobuf.Any annotations = 1;
}

message RotateCredentialRequest {
  ResourceId resource_id = 1;
  CredentialOptions credential_options = 2;
  repeated EncryptionConfig encryption_configs = 3;
}

message RotateCredentialResponse {
  repeated EncryptedData encrypted_data = 1;
  ResourceId resource_id = 2;
  repeated google.protobuf.Any annotations = 3;
}

message AccountInfo {
  message Email {
    string address = 1 [(validate.rules).string = {email: true}];
    // Indicates if this is the user's primary email. Only one entry can be marked as primary.
    bool is_primary = 2;
  }
  repeated Email emails = 1;

  // The user's login
  string login = 2;
  // Any additional login aliases for the user
  repeated string login_aliases = 3;
  google.protobuf.Struct profile = 4;
}

message CredentialOptions {
  message RandomPassword {
    int64 length = 1 [(validate.rules).int64 = {
      gte: 8,
      lte: 64
    }];
  }
  oneof options {
    RandomPassword random_password = 100;
  }
}

message CreateAccountRequest {
  AccountInfo account_info = 1;
  CredentialOptions credential_options = 2;
  repeated EncryptionConfig encryption_configs = 3;
}

message CreateAccountResponse {
  message SuccessResult {
    Resource resource = 1;
    bool is_create_account_result = 2;
  }
  message ActionRequiredResult {
    Resource resource = 1;
    string message = 2;
    bool is_create_account_result = 3;
  }
  oneof result {
    SuccessResult success = 100;
    ActionRequiredResult action_required = 101;
  }
  repeated EncryptedData encrypted_data = 2;
  repeated google.protobuf.Any annotations = 3;
}

message EncryptedData {
  string provider = 1;
  string key_id = 2;
  string name = 3;
  string description = 4;
  string schema = 5; // optional
  bytes encrypted_bytes = 6; // if 'schema' is set, this should be JSON.
}

message PlaintextData {
  string name = 1;
  string description = 2;
  string schema = 3; // optional
  bytes bytes = 4; // if 'schema' is set, this should be JSON.
}

message EncryptionConfig {
  Resource principal = 1;
  string provider = 2;
  string key_id = 3;

  message JWKPublicKeyConfig {
    bytes pub_key = 1;
  }

  oneof config {
    JWKPublicKeyConfig jwk_public_key_config = 100;
  }
}

message ResourceId {
  string resource_type = 1 [(validate.rules).string = {
    min_bytes: 1
    max_bytes: 1024
  }];
  string resource = 2 [(validate.rules).string = {
    min_bytes: 1
    max_bytes: 1024
  }];
  bool baton_resource = 3;
}

message Resource {
  ResourceId id = 1;
  ResourceId parent_resource_id = 2;
  string display_name = 3 [(validate.rules).string = {
    min_bytes: 1
    max_bytes: 1024
    ignore_empty: true
  }];
  repeated google.protobuf.Any annotations = 4;
  string description = 5 [(validate.rules).string = {
    min_bytes: 1
    max_bytes: 2048
    ignore_empty: true
  }];
  bool baton_resource = 6;
  ExternalId external_id = 7;
  CreationSource creation_source = 8;

  // FIXME(mstanbCO): call this something else? Should it just be a bool? Possibly just use an annotation?
  enum CreationSource {
    CREATION_SOURCE_UNSPECIFIED = 0;
    CREATION_SOURCE_CONNECTOR_LIST_RESOURCES = 1;
    CREATION_SOURCE_CONNECTOR_LIST_GRANTS_PRINCIPAL_JIT = 2;
  }
}

message ResourcesServiceListResourcesRequest {
  string resource_type_id = 1 [(validate.rules).string = {
    min_bytes: 1
    max_bytes: 1024
  }];
  ResourceId parent_resource_id = 2 [(validate.rules).message = {required: false}];
  uint32 page_size = 3 [(validate.rules).uint32 = {
    ignore_empty: true
    lte: 250
  }];
  string page_token = 4 [(validate.rules).string = {
    ignore_empty: true
    min_bytes: 1
    max_bytes: 1048576 // 1MB
  }];
  repeated google.protobuf.Any annotations = 5;
}

message ResourcesServiceListResourcesResponse {
  repeated Resource list = 1;
  string next_page_token = 2 [(validate.rules).string = {
    ignore_empty: true
    min_bytes: 1
    max_bytes: 1048576 // 1MB
  }];
  repeated google.protobuf.Any annotations = 3;
}

message ExternalId {
  string id = 1;
  string link = 2;
  string description = 3;
}
